# VoiceRecord

./: CMakeLists.txt  README.md  gstreamer.md
src/: CMakeLists.txt  main.cpp
src/include/: timer.h
src/lib/: libFLAC++.so.6.3.0  libFLAC.so.8.3.0
src/media/: CMakeLists.txt  Media.cpp  Media.h
src/voip/: CMakeLists.txt  VoIP.cpp  VoIP.h
test/: CMakeLists.txt
